# RustApplication

./: .gitignore  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/rustapplication/: MainActivity.kt  RustGreetings.java
rust_lib/: .gitignore  Cargo.toml
rust_lib/.cargo/: config.toml
rust_lib/src/: java_glue.rs.in  lib.rs
