[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.20.0", default-features = false }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_lib"
crate-type = ["cdylib"]

[dependencies]
#logging
log = "*"
log-panics="*"
android_logger = "*"

[build-dependencies]